--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>The AI Mavrick</title>
+    <meta
+      content="Adenola Adegbesan
+      Empowering Leaders to Navigate AI Transformation with Strategic Clarity
+      
+      AI is no longer a future concept—it's the present reality. The challenge isn't adopting AI but strategically integrating it to drive efficiency, decision-making, and competitive advantage."
+      name="description"
+    />
+    <link rel="icon" href="/favicon/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="/favicon/favicon-32x32.png"
+    />
+    <!-- IE -->
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <!-- iPhone -->
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="192x192"
+      href="/favicon/android-chrome-192x192.png"
+    />
+    <!-- iPad -->
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="512x512"
+      href="/favicon/android-chrome-512x512.png"
+    />
+    <meta content="AI, Technology, Speaking,CEO" name="keywords" />
   </head>
   <body>
     <div id="root"></div>
